@@ -123,7 +123,7 @@ public class FixTask00001CheckAssetsMissingIdentifiers  implements FixTask {
 				if (!x.equals(Inode.class)){
 					Object o;
 					try {
-						o = x.newInstance();
+						o = x.getDeclaredConstructor().newInstance();
 					} catch (Exception e) {
 						Logger.info(MaintenanceUtil.class, "Unable to instaniate object");
 						Logger.debug(MaintenanceUtil.class,"Unable to instaniate object", e);
@@ -145,7 +145,7 @@ public class FixTask00001CheckAssetsMissingIdentifiers  implements FixTask {
 				if (!x.equals(Inode.class)){
 					Object o;
 					try {
-						o = x.newInstance();
+						o = x.getDeclaredConstructor().newInstance();
 					} catch (Exception e) {
 						Logger.info(MaintenanceUtil.class,"Unable to instaniate object");
 						Logger.debug(MaintenanceUtil.class,"Unable to instaniate object", e);
