@@ -162,7 +162,7 @@ public class SystemRootResourceImpl implements FolderResource, LockingCollection
 	 * @see com.bradmcevoy.http.GetableResource#getMaxAgeSeconds()
 	 */
 	public Long getMaxAgeSeconds() {
-		return new Long(60);
+		return Long.valueOf(60);
 	}
 
 	/* (non-Javadoc)
