@@ -227,7 +227,7 @@ public class TempFolderResourceImpl implements FolderResource, LockableResource,
 	 * @see com.bradmcevoy.http.GetableResource#getMaxAgeSeconds()
 	 */
 	public Long getMaxAgeSeconds() {
-		return new Long(60);
+		return Long.valueOf(60);
 	}
 
 	/* (non-Javadoc)
